--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 85%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-angular"></span> AngulaJs</div>
+                            <div class="title"><span class="ion-social-angular"></span> AngularJs</div>
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 80%"></div>
                             </div>
@@ -127,19 +127,19 @@
                     <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-3 pure-u-xl-1-3">
                         <div class="l-box">
                             <h3>Tools</h3>
-                            <div class="title"><span class="ion-android-phone-portrait"></span> Cordova</div>
+                            <div class="title"><span class="ion-android-phone-portrait"></span>Hybrid framework(Cordova, PhoneGap)</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 80%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-reddit-outline"></span> Protractor and Karma</div>
+                            <div class="title"><span class="ion-social-reddit-outline"></span>Testing(Jasmine, Protractor, Karma)</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 80%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-sass"></span> SCSS/LESS</div>
+                            <div class="title"><span class="ion-social-sass"></span>CSS preprocessor(SCSS, LESS)</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 88%"></div>
                             </div>
-                            <div class="title"><span class="ion-android-settings"></span> Gulp/Grunt</div>
+                            <div class="title"><span class="ion-android-settings"></span>Task runner(Gulp, Grunt)</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 80%"></div>
                             </div>
@@ -152,7 +152,7 @@
                             <div class="progress-bar">
                                 <div class="progress" style="width: 75%"></div>
                             </div>
-                            <div class="title"><span class="ion-ios-flame"></span> Energy</div>
+                            <div class="title"><span class="ion-ios-flame"></span>Energy</div>
                             <div class="progress-bar">
                                 <div class="progress" style="width: 60%"></div>
                             </div>
@@ -160,9 +160,9 @@
                             <div class="progress-bar">
                                 <div class="progress" style="width: 90%"></div>
                             </div>
-                            <div class="title"><span class="ion-ios-people"></span> Social Network</div>
+                            <div class="title"><span class="ion-ios-people"></span> Social Networking</div>
                             <div class="progress-bar">
-                                <div class="progress" style="width: 40%"></div>
+                                <div class="progress" style="width: 50%"></div>
                             </div>
                         </div>
                     </div>
@@ -177,14 +177,14 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> 9+ years experience in Web/Mobile application development.</strong>
+                                <strong> More than 9 years experience in Web/Mobile application development.</strong>
                             </div>
                         </div>
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
                                 <strong>
- Nearly 4 years experience in Single page application development.
+ Nearly 4 years experience in Single page application development using Angular 2, AngularJs, Knockout JS
 
 </strong>
                             </div>
@@ -192,7 +192,7 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> Hands on experience in application development using Angular 2, AngularJs Knockout JS, Bootstrap, jQuery and Sass 
+                                <strong> Hands on experience in application development using Bootstrap, Materializecss, Angular Material, jQuery, Less, Scss 
  </strong>
                             </div>
                         </div>
@@ -206,14 +206,14 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> Experience in unit testing and End-to-End testing.
+                                <strong> Experienced in web application unit testing and End-to-End testing using Jasmine, .
 </strong>
                             </div>
                         </div>
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> Experienced in server side programming using PHP and MySQL.
+                                <strong> Experienced in server side programming using PHP, ASP.NET, MySQL, Sitecore
 </strong>
                             </div>
                         </div>
@@ -228,7 +228,7 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong>Have more than 3 year experience in Banking domain.
+                                <strong>Have more than 3 years experience in Banking domain.
 </strong>
                             </div>
                         </div>
@@ -249,7 +249,8 @@
                                 <p>Tata Consultancy Services | Melbourne, Australia
                                 </p>
                                 <p class="content">
-                                    In this role I was working various projects of AGL, I am currently working in AGL One Minute Move. One Minute Move initiative is to deliver a new online experience flow for customers moving home, which caters for both move in and move out customers.
+                                    Currently I am working in One of the TCS customer in Australia named AGL. Currently we are doing AGL One Minute Move. One Minute Move initiative is to deliver a new online experience flow for customers moving home, which caters for both move in and move
+                                    out customers. The web application we started with Angular 2 and then moved to Angular 4. We are targetting 100% code coverage in this project.
                                 </p>
                                 <p class="content">
                                     <i>
@@ -294,9 +295,9 @@
                                 <p>Tata Consultancy Services | Riyadh, Saudi Arabia
                                 </p>
                                 <p class="content">
-                                    In this role I was at onsite for the hybrid app implementation for SADAD P2P application. As a solution architect, I did complete design of application and had discussed with all stakeholders, provided up to date status for all stakeholders. The main
-                                    challenges I faced in that project was security breach in Hybrid applications, I developed some Cordova libraries to mitigate all security breaches. I also provided technical support to offshore team for quality and
-                                    timely delivery.
+                                    In this role I was at onsite for the hybrid app implementation for for one Saudi Arabian customer. As a solution architect, I did complete design of application and had discussed with all stakeholders, provided up to date status for all stakeholders.
+                                    The main challenges I faced in that project was security breach in Hybrid applications, I developed some Cordova libraries to mitigate all security breaches. I also provided technical support to offshore team for quality
+                                    and timely delivery.
 
                                 </p>
                                 <p class="content">
@@ -343,10 +344,10 @@
                                 <p>Tata Consultancy Services | Kochi, Kerala
                                 </p>
                                 <p class="content">
-                                    In this role I was leading a 10-member project <i>TCS BaNCS Digital suite</i>, TCS BaNCS Digital suites is an enterprise wide solution that enables your bank to give your customers the flexibility and convenience of
+                                    In this role I was leading a 10 member project <i>TCS BaNCS Digital suite</i>, TCS BaNCS Digital suites is an enterprise wide solution that enables your bank to give your customers the flexibility and convenience of
                                     managing their finances anywhere. The solution is easily deployable and scalable and caters to retail and corporate banking (focused on small and medium businesses (SMBs)). The TCS BaNCS Digital suites consist of both
                                     Mobile and Web application and targeting all main form factors. Mobile application is a hybrid mobile application for iOS and Android. For this project we had lot research on the various (Backbone.js, ember.js and AngularJs)
-                                    front-end framework finally we decided to go with AngularJs as JavaScript framework for front-end.
+                                    front-end framework finally we decided to go with AngularJs as JavaScript framework for front-end. As a tech lead I could successfully menter three juniors during this period.
                                 </p>
                                 <p class="content">
                                     <i>
@@ -366,7 +367,8 @@
                                 <h3>IT Analyst - Module lead</h3>
                                 <p>Tata Consultancy Services | Kochi, Kerala</p>
                                 <p class="content">
-                                    This is my first role in TCS. In this role I was leading a four member team for one of our internal product, Hy5 Presidio(Mobile device management tool). Technically I introduced some new tools this project.
+                                    This is my first role in TCS. In this role I was leading a four member team for one of our internal product Hy5 Presidio(Mobile device management tool). Technically I introduced some new tools this project for example, Bootstrap. I did complete layouting
+                                    and design of this project
                                 </p>
                                 <p class="content">
                                     <i>
@@ -388,7 +390,7 @@
                                 <p>Cabot Technology Solutions Pvt Ltd. Kochi, Kerala</p>
                                 <p class="content">
                                     In this role, I worked in <i>Fan2Band</i>, <i>Beastly.com</i> an hollywood movie website. As a senior developer I played key role for designing architecture of several projects in this company. I also worked on some
-                                    facebook appilcations in this duration. In this role I also started some mobile web apps developement using JQuery Mobile and JQtouch.
+                                    facebook appilcations in this duration. In this company I also started some mobile web apps developement using JQuery Mobile and JQtouch.
                                 </p>
                                 <p class="content">
                                     <i>
@@ -416,7 +418,7 @@
                                 <p>Cabot Technology Solutions Pvt Ltd. Kochi, Kerala</p>
                                 <p class="content">
                                     In this role, I worked in <i>Fan2Band</i>, a social web marketing solutions that leverages social networks and peer-to-peer influence to spread brand awareness. I received <i>Star of Month</i> award in Nov 2008 for
-                                    playing a key role during the investigation of major technical issues in the system, designing and building solutions.
+                                    playing a key role during the investigation of major technical issues in that project.
                                 </p>
                                 <p class="content">
                                     <i>
@@ -480,7 +482,7 @@
                         <div class="l-box cards">
                             <div class="card selected">
                                 <div class="avatar "><span class="ion-ribbon-b "></span></div>
-                                <p><strong>AngularJS Intermediate - Certificate</strong>
+                                <p><strong>AngularJS - Certificate</strong>
                                     <br><span class="light">28th Feb 2017 | TCS Internal</span>
                                 </p>
                             </div>
@@ -490,7 +492,7 @@
                         <div class="l-box cards">
                             <div class="card selected">
                                 <div class="avatar "><span class="ion-ribbon-b"></span></div>
-                                <p><strong>JavaScript Intermediate</strong>
+                                <p><strong>JavaScript </strong>
                                     <br><span class="light">25th Feb 2017 | TCS Internal</span>
                                 </p>
                             </div>
@@ -510,7 +512,7 @@
                         <div class="l-box cards">
                             <div class="card selected">
                                 <div class="avatar "><span class="ion-ribbon-b "></span></div>
-                                <p><strong>Microsoft Web Platform ASP.NET Intermediate - Certificate</strong>
+                                <p><strong>Microsoft Web Platform ASP.NET - Certificate</strong>
                                     <br><span class="light">25th Feb 2017 | TCS Internal</span>
                                 </p>
                             </div>
