--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <section id="skills" class="skills">
                 <h1><strong>Technologies</strong></h1>
                 <div class="pure-g">
-                    <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-3 pure-u-xl-1-3">
+                    <div class="pure-u-1 pure-u-md-1-3 pure-u-lg-1-3 pure-u-xl-1-3">
                         <div class="l-box">
                             <h3>Font-End</h3>
                             <div class="title"><span class="ion-social-html5"></span> HTML5/CSS3/JavaScript</div>
@@ -124,7 +124,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-3 pure-u-xl-1-3">
+                    <div class="pure-u-1 pure-u-md-1-3 pure-u-lg-1-3 pure-u-xl-1-3">
                         <div class="l-box">
                             <h3>Tools</h3>
                             <div class="title"><span class="ion-android-phone-portrait"></span>Hybrid framework(Cordova, PhoneGap)</div>
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-3 pure-u-xl-1-3">
+                    <div class="pure-u-1 pure-u-md-1-3 pure-u-lg-1-3 pure-u-xl-1-3">
                         <div class="l-box">
                             <h3>Domains</h3>
                             <div class="title"><span class="ion-stats-bars"></span> Data Visualization</div>
@@ -187,13 +187,6 @@
  Nearly 4 years experience in Single page application development using Angular 2, AngularJs, Knockout JS
 
 </strong>
-                            </div>
-                        </div>
-                        <div class="l-box">
-                            <span class="icon ion-trophy "></span>
-                            <div class=" content ">
-                                <strong> Hands on experience in application development using Bootstrap, Materializecss, Angular Material, jQuery, Less, Scss 
- </strong>
                             </div>
                         </div>
                         <div class="l-box">
@@ -618,6 +611,12 @@
                         </div>
                     </div>
                 </div>
+            </section>
+            <section id="likes">
+                <h1><strong>REFERENCES</strong></h1>
+                <blockquote>
+                    References available upon request.
+                </blockquote>
             </section>
             <section class="only-print">
                 <h1></h1>
