--- a/index.html
+++ b/index.html
@@ -100,75 +100,6 @@
                     </div>
                 </div>
             </section>
-            <section id="skills" class="skills">
-                <h1><strong>Technologies</strong></h1>
-                <div class="pure-g">
-                    <div class="pure-u-1 pure-u-md-1-3 pure-u-lg-1-3 pure-u-xl-1-3">
-                        <div class="l-box">
-                            <h3>Font-End</h3>
-                            <div class="title"><span class="ion-social-html5"></span> HTML5/CSS3/JavaScript</div>
-                            <div class="progress-bar">
-                                <div class="progress color-2" style="width: 85%"></div>
-                            </div>
-                            <div class="title"><span class="ion-social-angular"></span> AngularJs</div>
-                            <div class="progress-bar">
-                                <div class="progress color-2" style="width: 80%"></div>
-                            </div>
-                            <div class="title"><span class="ion-social-angular"></span> Angular 2</div>
-                            <div class="progress-bar">
-                                <div class="progress color-2" style="width: 70%"></div>
-                            </div>
-                            <div class="title"><span class="ion-social-javascript"></span> Knockout.js</div>
-                            <div class="progress-bar">
-                                <div class="progress color-2" style="width: 60%"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pure-u-1 pure-u-md-1-3 pure-u-lg-1-3 pure-u-xl-1-3">
-                        <div class="l-box">
-                            <h3>Tools</h3>
-                            <div class="title"><span class="ion-android-phone-portrait"></span>Hybrid framework(Cordova, PhoneGap)</div>
-                            <div class="progress-bar">
-                                <div class="progress color-3" style="width: 80%"></div>
-                            </div>
-                            <div class="title"><span class="ion-social-reddit-outline"></span>Testing(Jasmine, Protractor, Karma)</div>
-                            <div class="progress-bar">
-                                <div class="progress color-3" style="width: 80%"></div>
-                            </div>
-                            <div class="title"><span class="ion-social-sass"></span>CSS preprocessor(SCSS, LESS)</div>
-                            <div class="progress-bar">
-                                <div class="progress color-3" style="width: 88%"></div>
-                            </div>
-                            <div class="title"><span class="ion-android-settings"></span>Task runner(Gulp, Grunt)</div>
-                            <div class="progress-bar">
-                                <div class="progress color-3" style="width: 80%"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pure-u-1 pure-u-md-1-3 pure-u-lg-1-3 pure-u-xl-1-3">
-                        <div class="l-box">
-                            <h3>Domains</h3>
-                            <div class="title"><span class="ion-stats-bars"></span> Data Visualization</div>
-                            <div class="progress-bar">
-                                <div class="progress" style="width: 75%"></div>
-                            </div>
-                            <div class="title"><span class="ion-ios-flame"></span>Energy</div>
-                            <div class="progress-bar">
-                                <div class="progress" style="width: 60%"></div>
-                            </div>
-                            <div class="title"><span class="ion-cash"></span> Banking </div>
-                            <div class="progress-bar">
-                                <div class="progress" style="width: 90%"></div>
-                            </div>
-                            <div class="title"><span class="ion-ios-people"></span> Social Networking</div>
-                            <div class="progress-bar">
-                                <div class="progress" style="width: 50%"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
             <section id="career-summary" class="timeline-section ">
                 <h1><strong>Career</strong> Summary</h1>
                 <div class="pure-g ">
@@ -184,7 +115,7 @@
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
                                 <strong>
- Nearly 4 years experience in Single page application development using Angular 2, AngularJs, Knockout JS
+  More than 3 years experience in Single page application development using Angular 2, AngularJs, Knockout JS
 
 </strong>
                             </div>
@@ -192,7 +123,7 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> Experienced in Agile and waterfall development models
+                                <strong> Experienced in Agile(JIRA and Fulcrum) and waterfall development models
 </strong>
                             </div>
                         </div>
@@ -206,7 +137,7 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> Experienced in server side programming using PHP, ASP.NET, MySQL, Sitecore
+                                <strong> Experienced in Hybrid applicaion developement.
 </strong>
                             </div>
                         </div>
@@ -228,6 +159,103 @@
                     </div>
                 </div>
             </section>
+            <section id="skills" class="skills">
+                <h1><strong>Technologies</strong></h1>
+                <div class="pure-g">
+                    <div class="pure-u-1-2 pure-u-md-1-2 pure-u-lg-1-2 pure-u-xl-1-2">
+                        <div class="l-box">
+                            <h3>Font-End</h3>
+                            <div class="title"><span class="ion-social-html5"></span> HTML5/CSS3/JavaScript</div>
+                            <div class="progress-bar">
+                                <div class="progress color-2" style="width: 90%"></div>
+                            </div>
+                            <div class="title"><span class="ion-social-angular"></span> AngularJs</div>
+                            <div class="progress-bar">
+                                <div class="progress color-2" style="width: 80%"></div>
+                            </div>
+                            <div class="title"><span class="ion-social-angular"></span> Angular 2</div>
+                            <div class="progress-bar">
+                                <div class="progress color-2" style="width: 70%"></div>
+                            </div>
+                            <div class="title"><span class="ion-social-javascript"></span> Knockout.js</div>
+                            <div class="progress-bar">
+                                <div class="progress color-2" style="width: 60%"></div>
+                            </div>
+                            <div class="title"><span class="ion-social-javascript"></span> JQuery</div>
+                            <div class="progress-bar">
+                                <div class="progress color-2" style="width: 70%"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-2 pure-u-lg-1-2 pure-u-xl-1-2">
+                        <div class="l-box">
+                            <h3>Software developement models</h3>
+                            <div class="title"><span class="ion-ios-timer-outline"></span> Agile Scrum</div>
+                            <div class="progress-bar">
+                                <div class="progress color-4" style="width: 75%"></div>
+                            </div>
+                            <div class="title"><span class="ion-arrow-graph-down-right"></span>Waterfall</div>
+                            <div class="progress-bar">
+                                <div class="progress color-4" style="width: 50%"></div>
+                            </div>
+                            <h3>Backend</h3>
+                            <div class="title"><span class="ion-code"></span> ASP.NET & Sitecore</div>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 25%"></div>
+                            </div>
+                            <div class="title"><span class="ion-code-working"></span>PHP & MySQL</div>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 50%"></div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-2 pure-u-lg-1-2 pure-u-xl-1-2">
+                        <div class="l-box">
+                            <h3>Domains</h3>
+                            <div class="title"><span class="ion-stats-bars"></span> Data Visualization</div>
+                            <div class="progress-bar">
+                                <div class="progress color-5" style="width: 75%"></div>
+                            </div>
+                            <div class="title"><span class="ion-ios-flame"></span>Energy</div>
+                            <div class="progress-bar">
+                                <div class="progress color-5" style="width: 60%"></div>
+                            </div>
+                            <div class="title"><span class="ion-cash"></span> Banking </div>
+                            <div class="progress-bar">
+                                <div class="progress color-5" style="width: 85%"></div>
+                            </div>
+                            <div class="title"><span class="ion-ios-people"></span> Social Networking</div>
+                            <div class="progress-bar">
+                                <div class="progress color-5" style="width: 50%"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pure-u-1-2 pure-u-md-1-2 pure-u-lg-1-2 pure-u-xl-1-2">
+                        <div class="l-box">
+                            <h3>Tools</h3>
+                            <div class="title"><span class="ion-android-phone-portrait"></span>Cordova</div>
+                            <div class="progress-bar">
+                                <div class="progress color-3" style="width: 80%"></div>
+                            </div>
+                            <div class="title"><span class="ion-social-reddit-outline"></span>Testing(Jasmine, Protractor, Karma)</div>
+                            <div class="progress-bar">
+                                <div class="progress color-3" style="width: 60%"></div>
+                            </div>
+                            <div class="title"><span class="ion-social-sass"></span>CSS preprocessor(SCSS, LESS)</div>
+                            <div class="progress-bar">
+                                <div class="progress color-3" style="width: 88%"></div>
+                            </div>
+                            <div class="title"><span class="ion-android-settings"></span>Task runner(Gulp, Grunt)</div>
+                            <div class="progress-bar">
+                                <div class="progress color-3" style="width: 50%"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
 
             <section id="career-profile" class="timeline-section ">
                 <h1><strong>Career</strong> Profile</h1>
@@ -242,8 +270,8 @@
                                 <p>Tata Consultancy Services | Melbourne, Australia
                                 </p>
                                 <p class="content">
-                                    Currently I am working in One of the TCS customer in Australia named AGL. Currently we are doing AGL One Minute Move. One Minute Move initiative is to deliver a new online experience flow for customers moving home, which caters for both move in and move
-                                    out customers. The web application we started with Angular 2 and then moved to Angular 4. We are targetting 100% code coverage in this project.
+                                    Currently I am working with One of the TCS customer in Australia named AGL. Currently we are doing AGL One Minute Move. One Minute Move initiative is to deliver a new online experience flow for customers moving home, which caters for both move in and
+                                    move out customers. The web application we started with Angular 2 and then moved to Angular 4. We are targetting 100% code coverage in this project.
                                 </p>
                                 <p class="content">
                                     <i>
@@ -288,7 +316,7 @@
                                 <p>Tata Consultancy Services | Riyadh, Saudi Arabia
                                 </p>
                                 <p class="content">
-                                    In this role I was at onsite for the hybrid app implementation for for one Saudi Arabian customer. As a solution architect, I did complete design of application and had discussed with all stakeholders, provided up to date status for all stakeholders.
+                                    In this role I was at onsite for the hybrid app implementation for one Saudi Arabian customer. As a solution architect, I did complete design of application and had discussed with all stakeholders.I was provided up to date status for all stakeholders.
                                     The main challenges I faced in that project was security breach in Hybrid applications, I developed some Cordova libraries to mitigate all security breaches. I also provided technical support to offshore team for quality
                                     and timely delivery.
 
@@ -620,7 +648,7 @@
             </section>
             <section class="only-print">
                 <h1></h1>
-                <strong class="light">A copy of this resume can be viewed online @ <a href="https://mvmujeeb.github.io/cv">https://mvujeeb.github.io/cv</a></strong>
+                <strong class="light">A copy of this resume can be viewed online @ <a href="https://mvmujeeb.github.io/cv">https://mvmujeeb.github.io/cv</a></strong>
             </section>
         </article>
     </main>
