--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
                                 <strong>
-  More than 3 years experience in Single page application development using Angular 2, AngularJs, Knockout JS
+  More than 3 years experience in Single page application development using Angular 2/4, AngularJs, Knockout JS
 
 </strong>
                             </div>
@@ -130,14 +130,14 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> Experienced in web application unit testing and End-to-End testing using Jasmine, .
+                                <strong> Experienced in web application unit testing and End-to-End testing.
 </strong>
                             </div>
                         </div>
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> Experienced in Hybrid applicaion developement.
+                                <strong> I played onsite solution architect role in one hybrid app implementation.
 </strong>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong>Have more than 3 years experience in Banking domain.
+                                <strong>I have more than 3 years experience in Banking domain.
 </strong>
                             </div>
                         </div>
@@ -270,19 +270,20 @@
                                 <p>Tata Consultancy Services | Melbourne, Australia
                                 </p>
                                 <p class="content">
-                                    Currently I am working with One of the TCS customer in Australia named AGL. Currently we are doing AGL One Minute Move. One Minute Move initiative is to deliver a new online experience flow for customers moving home, which caters for both move in and
-                                    move out customers. The web application we started with Angular 2 and then moved to Angular 4. We are targetting 100% code coverage in this project.
+                                    This is my second onsite role, as a senior developer in AGL digital transformation team I got opportunity to explore new front-end and back-end technologies. Currently we are concentrating on AGL One Minute Move. One Minute Move initiative is to deliver
+                                    a new online experience flow for customers moving home, which caters for both move in and move out customers. The web application we started with Angular 2 and then upgraded to Angular 4. We are targeting 100% code
+                                    coverage in this project by doing unit testing and end-to-end testing.
                                 </p>
                                 <p class="content">
                                     <i>
                                         <span class="b">HTML5/CSS3/JavaScript</span>
                     <span class="f">Angular 2 and Angular 4</span>
                     <span class="f">Knockout.js</span>
-                    <span class="f">ASP.NET</span>
-                    <span class="f">Sitecore</span>
-                    <span class="b">JIRA</span>
-                    <span class="b">Bamboo</span>
-                    <span class="b">Octopus</span>
+                    <span class="b">ASP.NET</span>
+                    <span class="b">Sitecore</span>
+                    <span class="t">JIRA</span>
+                    <span class="t">Bamboo</span>
+                    <span class="t">Octopus</span>
                     
                   </i>
                                 </p>
@@ -296,14 +297,13 @@
                                 <p>Tata Consultancy Services | Kochi, Kerala
                                 </p>
                                 <p class="content">
-                                    Revamping TCS.com was our prestigious project. For this project TCS higher management team picked the best developers from all Digital team. We have made the TCS.com best possible way with highly performance in limited period. Revamped TCS.com is now
-                                    live.
+                                    Revamping TCS.com was TCS’s prestigious project. For this project TCS higher management team picked the best developers from Digital team. We made the TCS.com best possible way with high performance in limited time. The new TCS.com is in production now.
                                 </p>
                                 <p class="content">
                                     <i>
-                    <span class="b">HTML5/CSS3/JavaScript</span>
+                    <span class="f">HTML5/CSS3/JavaScript</span>
                     <span class="f">Meterializecss</span>
-                    <span class="b">RWD</span>
+                    <span class="f">RWD</span>
                   </i>
                                 </p>
                             </div>
@@ -316,21 +316,21 @@
                                 <p>Tata Consultancy Services | Riyadh, Saudi Arabia
                                 </p>
                                 <p class="content">
-                                    In this role I was at onsite for the hybrid app implementation for one Saudi Arabian customer. As a solution architect, I did complete design of application and had discussed with all stakeholders.I was provided up to date status for all stakeholders.
-                                    The main challenges I faced in that project was security breach in Hybrid applications, I developed some Cordova libraries to mitigate all security breaches. I also provided technical support to offshore team for quality
-                                    and timely delivery.
+                                    The role as solution architect at onsite TCS presented with opportunities to attain in depth knowledge in hybrid app creation, security risks in hybrid applications and mitigate the security risks. Responsibilities also included making contribution application
+                                    architecture, conducting discussion with all stakeholders, provide up to date status for all stakeholders, and provide technical support to offshore team. The main challenges I faced in this project was security risks
+                                    in Hybrid applications. I developed some Cordova libraries for binary protection, jail break/routed detection, etc. to mitigate all security risks.
 
                                 </p>
                                 <p class="content">
                                     <i>
-                    <span class="b">AngularJs</span>
-                    <span class="b">HTML5/CSS3/JavaScript</span>
+                    <span class="f">AngularJs</span>
+                    <span class="f">HTML5/CSS3/JavaScript</span>
                     <span class="f">JQuery</span>
-                    <span class="b">RWD</span>
-                    <span class="b">Cordova</span>
-                    <span class="b">pure.css</span>
-                    <span class="b">Arxan</span>
-                    <span class="b">Elastic Search</span>
+                    <span class="f">RWD</span>
+                    <span class="t">Cordova</span>
+                    <span class="f">pure.css</span>
+                    <span class="t">Arxan</span>
+                    <span class="f">Elastic Search</span>
                   </i>
                                 </p>
                             </div>
@@ -343,16 +343,17 @@
                                 <p>Tata Consultancy Services | Kochi, Kerala
                                 </p>
                                 <p class="content">
-                                    In this role I was leading an offshore team of an implementation of TCS BaNCS Digital suite for First Niagara Bank, USA. We implemented hybrid mobile application for iOS and Android for all form factors. This application consists of several modules such
+                                    In this project I played a tech lead role of an offshore team, the project is a hybrid app implementation of TCS BaNCS Digital suite for leading bank in United States. The key responsibilities in this project is to understand complete requirements of
+                                    hybrid application, provide world class solution and implement, test the application. We implemented hybrid mobile application for iOS and Android for all form factors. This application consists of several modules such
                                     as Funds transfer, Bill Payments, Person-to-Person transfer.
                                 </p>
                                 <p class="content">
                                     <i>
-                    <span class="b">AngularJs</span>
-                    <span class="b">HTML5/CSS3/JavaScript</span>
+                    <span class="f">AngularJs</span>
+                    <span class="f">HTML5/CSS3/JavaScript</span>
                     <span class="f">JQuery</span>
-                    <span class="b">RWD</span>
-                    <span class="b">Cordova</span>
+                    <span class="f">RWD</span>
+                    <span class="t">Cordova</span>
                   </i>
                                 </p>
                             </div>
@@ -365,18 +366,19 @@
                                 <p>Tata Consultancy Services | Kochi, Kerala
                                 </p>
                                 <p class="content">
-                                    In this role I was leading a 10 member project <i>TCS BaNCS Digital suite</i>, TCS BaNCS Digital suites is an enterprise wide solution that enables your bank to give your customers the flexibility and convenience of
-                                    managing their finances anywhere. The solution is easily deployable and scalable and caters to retail and corporate banking (focused on small and medium businesses (SMBs)). The TCS BaNCS Digital suites consist of both
-                                    Mobile and Web application and targeting all main form factors. Mobile application is a hybrid mobile application for iOS and Android. For this project we had lot research on the various (Backbone.js, ember.js and AngularJs)
-                                    front-end framework finally we decided to go with AngularJs as JavaScript framework for front-end. As a tech lead I could successfully menter three juniors during this period.
+                                    As a tech lead role of a 10-member project I invested more time in attaining in-depth knowledge in various front-end technologies available in technology market. TCS BaNCS Digital suites is an enterprise wide solution that enables bank to give customers
+                                    the flexibility and convenience of managing their finances anywhere. The solution is easily deployable and scalable and caters to retail and corporate banking (focused on small and medium businesses (SMBs)). To make
+                                    a world class banking solutions, for TCS BaNCS Digital suites we did lot of research on various (Backbone.js, ember.js and AngularJs) front-end frameworks to pic most suitable framework for the product. Finally, we
+                                    decided to go with AngularJs as JavaScript framework for front-end by considering its future, community, reusability, and modularity. The TCS BaNCS Digital suites consist of both Mobile and Web application and targeting
+                                    all available form factors. Mobile application is a hybrid mobile application for iOS and Android.
                                 </p>
                                 <p class="content">
                                     <i>
-                    <span class="b">AngularJs</span>
-                    <span class="b">HTML5/CSS3/JavaScript</span>
+                    <span class="f">AngularJs</span>
+                    <span class="f">HTML5/CSS3/JavaScript</span>
                     <span class="f">JQuery</span>
-                    <span class="b">RWD</span>
-                    <span class="b">Cordova</span>
+                    <span class="f">RWD</span>
+                    <span class="t">Cordova</span>
                   </i>
                                 </p>
                             </div>
@@ -388,8 +390,7 @@
                                 <h3>IT Analyst - Module lead</h3>
                                 <p>Tata Consultancy Services | Kochi, Kerala</p>
                                 <p class="content">
-                                    This is my first role in TCS. In this role I was leading a four member team for one of our internal product Hy5 Presidio(Mobile device management tool). Technically I introduced some new tools this project for example, Bootstrap. I did complete layouting
-                                    and design of this project
+                                    This is my first role in TCS. In this role I was leading a four-member team for one of our internal product Hy5 Presidio (Mobile device management tool). Technically I introduced some new tools in this project for example, Bootstrap.
                                 </p>
                                 <p class="content">
                                     <i>
@@ -411,7 +412,7 @@
                                 <p>Cabot Technology Solutions Pvt Ltd. Kochi, Kerala</p>
                                 <p class="content">
                                     In this role, I worked in <i>Fan2Band</i>, <i>Beastly.com</i> an hollywood movie website. As a senior developer I played key role for designing architecture of several projects in this company. I also worked on some
-                                    facebook appilcations in this duration. In this company I also started some mobile web apps developement using JQuery Mobile and JQtouch.
+                                    facebook appilcations in this duration. In this role I also started some mobile web apps developement using JQuery Mobile and JQtouch.
                                 </p>
                                 <p class="content">
                                     <i>
@@ -419,13 +420,13 @@
                     <span class="b">MySQL</span>
                     <span class="b">Yee</span>
                     <span class="b">CodeIgniter</span>
-                    <span class="b">HTML</span>
-                    <span class="b">JavaScript</span>
+                    <span class="f">HTML</span>
+                    <span class="f">JavaScript</span>
                     <span class="f">JQuery</span>
                     <span class="f">JQtouch,JQuery Mobile</span>
-                    <span class="b">CSS</span>
-                    <span class="b">Flex</span>
-                    <span class="b">FBML(Facebook Markup Language)</span>
+                    <span class="f">CSS</span>
+                    <span class="f">Flex</span>
+                    <span class="f">FBML(Facebook Markup Language)</span>
 
                   </i>
                                 </p>
@@ -445,9 +446,9 @@
                                     <i>
                     <span class="b">PHP</span>
                     <span class="b">MySQL</span>
-                    <span class="b">HTML</span>
-                    <span class="b">JavaScript</span>
-                    <span class="b">CSS</span>
+                    <span class="f">HTML</span>
+                    <span class="f">JavaScript</span>
+                    <span class="f">CSS</span>
 
                   </i>
                                 </p>
@@ -618,7 +619,7 @@
             <section id="contact">
                 <h1><strong>Contact</strong> Info</h1>
                 <div class="pure-g ">
-                    <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-2 ">
+                    <div class="pure-u-1-2 pure-u-md-1-2 pure-u-lg-1-2 ">
                         <div class="l-box">
                             <span class="icon ion-ios-location "></span>
                             <span class="content ">
@@ -628,7 +629,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-2 ">
+                    <div class="pure-u-1-2 pure-u-md-1-2 pure-u-lg-1-2 ">
                         <div class="l-box">
                             <span class="icon ion-email "></span>
                             <a class="content " href="mailto:mujeebrahmanmv@gmail.com ">mujeebrahmanmv@gmail.com</a>
