update -full stack

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <article>
             <div class="title">
                 <h1>Mujeeb Rahman MV</h1>
-                <summary>Senior Front-end Developer</summary>
+                <summary>Senior Full Stack Developer</summary>
                 <div class="button-container">
                     <button onclick="window.open('assets/docs/Mujeeb_Rahman_MV.pdf')">Download</button>
                 </div>
@@ -94,7 +94,7 @@
                 <div class="pure-g">
                     <div class="pure-u-1">
                         <div class="l-box">
-                            A creative technology enthusiast and senior frontend developer with more than 9 years of experience in creating Hybrid Apps and pixel perfect websites. I derive great joy in learning new technologies and providing solutions. I am seeking new challenging
+                            A creative technology enthusiast and senior full Stack developer with more than 9 years of experience in creating Hybrid Apps and pixel perfect websites. I derive great joy in learning new technologies and providing solutions. I am seeking new challenging
                             opportunities especially in web technologies that will enable me to acquire new skills.
                         </div>
                     </div>
@@ -186,11 +186,11 @@
                             </div>
                             <div class="title"><span class="ion-social-javascript"></span> Knockout.js</div>
                             <div class="progress-bar">
-                                <div class="progress color-2" style="width: 60%"></div>
+                                <div class="progress color-2" style="width: 40%"></div>
                             </div>
                             <div class="title"><span class="ion-social-javascript"></span> JQuery</div>
                             <div class="progress-bar">
-                                <div class="progress color-2" style="width: 70%"></div>
+                                <div class="progress color-2" style="width: 75%"></div>
                             </div>
                         </div>
                     </div>
@@ -207,7 +207,7 @@
                             </div>
                             <div class="title"><span class="ion-social-nodejs"></span>Nodejs</div>
                             <div class="progress-bar">
-                                <div class="progress" style="width: 70%"></div>
+                                <div class="progress" style="width: 50%"></div>
                             </div>
                             <h3></h3>
                             <h3>Software developement models</h3>
@@ -217,7 +217,7 @@
                             </div>
                             <div class="title"><span class="ion-arrow-graph-down-right"></span>Waterfall</div>
                             <div class="progress-bar">
-                                <div class="progress color-4" style="width: 50%"></div>
+                                <div class="progress color-4" style="width: 60%"></div>
                             </div>
                         </div>
 
@@ -248,17 +248,17 @@
                             <h3>Tools</h3>
                             <div class="title"><span class="ion-android-phone-portrait"></span>Cordova</div>
                             <div class="progress-bar">
-                                <div class="progress color-3" style="width: 80%"></div>
+                                <div class="progress color-3" style="width: 50%"></div>
                             </div>
                             <div class="title"><span class="ion-social-reddit-outline"></span>Testing(Jasmine, Protractor, Karma)</div>
                             <div class="progress-bar">
-                                <div class="progress color-3" style="width: 60%"></div>
+                                <div class="progress color-3" style="width: 70%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-sass"></span>CSS preprocessor(SCSS, LESS)</div>
+                            <div class="title"><span class="ion-social-sass"></span>CSS preprocessor(SASS, LESS)</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 88%"></div>
                             </div>
-                            <div class="title"><span class="ion-android-settings"></span>Task runner(Gulp, Grunt)</div>
+                            <div class="title"><span class="ion-android-settings"></span>Build Automation(Webpack, Gulp)</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 50%"></div>
                             </div>
