--- a/index.html
+++ b/index.html
@@ -6,20 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Mujeeb Rahman MV">
     <title>Mujeeb Rahman MV</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/icon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/icon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/icon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/icon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/icon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/icon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/icon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/icon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/icon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/icon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
-    <link rel="manifest" href="assets/icon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets/icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -428,9 +414,19 @@
 
 
             <section id="certifications">
-                <h1><strong>Certifications</strong></h1>
+                <h1><strong>Certifications / Training</strong></h1>
 
                 <div class="pure-g">
+                    <div class="pure-u-1-1 pure-u-md-1-2 pure-u-lg-1-3 pure-u-xl-1-3">
+                        <div class="l-box cards">
+                            <div class="card selected">
+                                <div class="avatar "><span class="ion-ribbon-b "></span></div>
+                                <p><strong>Leading SAFe</strong>
+                                    <br><span class="light">Jun 2017 | elabor8</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="pure-u-1-1 pure-u-md-1-2 pure-u-lg-1-3 pure-u-xl-1-3">
                         <div class="l-box cards">
                             <div class="card selected">
@@ -481,16 +477,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pure-u-1-1 pure-u-md-1-2 pure-u-lg-1-3 pure-u-xl-1-3">
-                        <div class="l-box cards">
-                            <div class="card selected">
-                                <div class="avatar "><span class="ion-ribbon-b "></span></div>
-                                <p><strong>Microsoft Web Platform ASP.NET - Certificate</strong>
-                                    <br><span class="light">25th Feb 2017 | TCS Internal</span>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </section>
             <section id="meetups">
